Making animations and rocket placement mobile friendly

--- a/index.html
+++ b/index.html
@@ -121,14 +121,12 @@
                 <g>
                 </g>
             </svg>
-            <img class="rocket" src="images/rocket.png" alt="Rocket - Rocket Icon Png@seekpng.com">
+            <img class="rocket" id = "rocketOne" src="images/rocket.png" alt="Rocket - Rocket Icon Png@seekpng.com">
         </div>
     </section>
 
     <section class="space-section" id="second-space-section">
-        <div class="rocket">
-
-        </div>
+        
         <div class="about-us">
             <h2>About Us</h2>
 
@@ -162,7 +160,7 @@
             </div>
         </div>
 
-        <img class= "rocketTwo" src="images/rocket.png" alt="Rocket">
+        <img class= "rocket" id="rocketTwo" src="images/rocket.png" alt="Rocket">
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
